--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://dukelazy.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: 放羊的博客
+subtitle: 万能的技术,苦逼的技术.
+author: Duke Lazy
 simple_search: https://www.google.com/search
 description:
 
@@ -27,19 +27,21 @@ email:
 
 # If publishing to a subdirectory as in http://site.com/project set 'root: /project'
 root: /
-permalink: /blog/:year/:month/:day/:title/
+# permalink: /blog/:year/:month/:day/:title/
+permalink: /:year/:month/:title/
 source: source
 destination: public
 plugins: plugins
 code_dir: downloads/code
-category_dir: blog/categories
+# category_dir: blog/categories
+category_dir: category/
 markdown: rdiscount
 rdiscount:
   extensions:
     - autolink
     - footnotes
     - smart
-#    - talbe
+#   - talbe
 highlighter: pygments # default python pygments have been replaced by pygments.rb
 
 paginate: 10          # Posts per page on the blog index
