关闭自动识别文章中的超级链接
Signed-off-by: Duke Lazy <dukelazy@Gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -38,10 +38,10 @@ category_dir: category/
 markdown: rdiscount
 rdiscount:
   extensions:
-    - autolink
+#    - autolink
     - footnotes
     - smart
-#   - talbe
+
 highlighter: pygments # default python pygments have been replaced by pygments.rb
 
 paginate: 10          # Posts per page on the blog index
